--- a/imports/client/styles/components/page-sidebar/_item.scss
+++ b/imports/client/styles/components/page-sidebar/_item.scss
@@ -20,7 +20,7 @@
     }
 }
 
-.item-list--dsbj {
+.item-list--noroombar {
     width: 100%;
 }
 
